syntax="proto3";

package statistics;

option java_package = "de.hpi.tdgt.stats";
option java_outer_classname = "StatisticProtos";

message Statistic {
  Population total = 1;
  uint64 id = 2;
  repeated Population populations = 3;
  repeated ErrorEntry errors = 4;
  uint32 sequenceNr = 5;
  repeated LongIntEntry usersPerTime = 6;
}

message Population {
  Endpoint ep = 1;
  repeated LongIntEntry requestsPerSecond = 2;
  repeated LongIntEntry failuresPerSecond = 3;
  uint32 numRequests = 4;
  uint32 numFailures = 5;
  uint64 totalResponseTime = 6;
  uint64 minResponseTime = 7;
  uint64 maxResponseTime = 8;
  uint32 totalContentLength = 9;
  uint64 startTime = 10;
  uint64 latestRequestTime = 11;
  repeated ResponseTimeEntry latencyPerSecond = 12;
}

message Endpoint {
  string url = 1;
  Method method = 2;

  enum Method {
    POST = 0;
    GET = 1;
    PUT = 2;
    DELETE = 3;
  }
}

message ErrorEntry {
  string error = 1;
  uint32 count = 2;
  Endpoint endpoint = 3;
}

message LongIntEntry {
  uint64 key = 1;
  uint32 value = 2;
}

message ResponseTimeEntry {
  uint64 time = 1;
  repeated LongIntEntry latencyCount = 2;
}